modify theme colors to fix contrast error

--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     --btn-bg-hover: #f3976c;
     --btn-text: #FFFFFF;
     --btn-text-hover: #382218;
-    --primary-bg: #965436;
-    --secondary-text: #ffd1bb;
+    --primary-bg: #77442C;
+    --secondary-text: #FFEAE0;
   }
 
 html {
